--- a/todo_sql/templates/todos.html
+++ b/todo_sql/templates/todos.html
@@ -18,7 +18,7 @@
     </thead>
  {% for todo in todos %}
     <tr>
-        <td><a href="/todos/{{ loop.index }}">{{ todo.id }}</a></td>
+        <td><a href="/todos/{{ loop.index }} "> {{ todo.id }} </a></td>
         <td>{{ todo.nazwa }}</td>
         <td>{{ todo.deadline }}</td>
         <td>{{ todo.priorytet }}</td>
@@ -30,7 +30,7 @@
     <form method="POST" action="/todos/">
         {{ form.hidden_tag() }}
         <table>
-            {% for field in form if field.widget.input_type != 'hidden' %}
+            {% for field in form if field.widget.input_type != 'hidden' and field[label] != "id" %}
                 <tr>
                     <th>{{ field.label }} {% if field.flags.required %}*{% endif %}</th>
                     <td>{{ field }}</td>
